--- a/css/projeto.css
+++ b/css/projeto.css
@@ -42,3 +42,82 @@ input[type=radio]{
 .errado{
     color: red;
 }
+
+#relogio{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    background-color: gray;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid rgb(62, 62, 62);
+    margin: auto;
+}
+#horario{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    color: rgb(0, 183, 0);
+    font-family: monospace;
+    background-color: rgb(80, 80, 80);
+    width: 200px;
+    border-radius: 10px;
+    font-size: 30px;
+    margin: auto;
+    border: 2px solid rgb(62, 62, 62);
+}
+#alarme{
+    display: flex;
+    flex-direction: column;
+    margin: 10px 5px 5px 5px;
+}
+#inputAlarme{
+    padding: 5px;
+    width: 100px;
+    font-size: 15px;
+    border-radius: 5px;
+    border: solid;
+}
+#tempoAlarme{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+}
+#botoes{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.botao{
+    background-color: rgb(92, 92, 92);
+    padding: 15px;
+    color: white;
+    border: 2px solid rgb(62, 62, 62);
+    border-radius: 10px;
+    transition: 0.25s;
+    margin: 0;
+}
+.botao:hover{
+    background-color: rgb(62, 62, 62);
+    border: 2px solid rgb(42, 42, 42);
+}
+.medidaTempo{
+    display: flex;
+    align-items: center;
+}
+.tocando{
+    background-color: lightcoral !important;
+}
+#divMedidasTempo{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0;
+}
+.medidaTempo{
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
